--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 :root {
-    --primary-bg: #c75467;
+    --primary-bg: #b84054;
     --secondary-bg: #894e59;
     --nav-bg: #4c5c8e;
     --hover-bg: #de5d74;
