--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 :root {
-    --primary-bg: #b84054;
-    --secondary-bg: #894e59;
+    --primary-bg: #aa4655;
+    --secondary-bg: #913b4b;
     --nav-bg: #4c5c8e;
     --hover-bg: #de5d74;
     --content-bg: #f4f5ee;
